--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="./node_modules/preloadjs/lib/preloadjs.min.js"></script>
 
     <!--Game scripts-->
+    <script src="./Scripts/objects/character.js"></script>
+    <script src="./Scripts/objects/classroomItem.js"></script>    
     <script src="./Scripts/game.js"></script>
 </body>
 </html>
