pick up object and character movements

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <script src="./node_modules/preloadjs/lib/preloadjs.min.js"></script>
 
     <!--Game scripts-->
+    <script src="./Scripts/objects/Vector2.js"></script>
+    <script src="./Scripts/objects/GameObject.js"></script>
+    <script src="./Scripts/objects/keys.js"></script>
+    <script src="./Scripts/objects/input.js"></script>
+
     <script src="./Scripts/objects/character.js"></script>
     <script src="./Scripts/objects/classroomItem.js"></script>    
     <script src="./Scripts/game.js"></script>
