--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     <script src="./node_modules/preloadjs/lib/preloadjs.min.js"></script>
 
     <!--Game scripts-->
+    <script src="./Scripts/config/game.js"></script>
+    <script src="./Scripts/managers/Collision.js"></script>
+    <script src="./Scripts/managers/keys.js"></script>
+    <script src="./Scripts/managers/input.js"></script>
+
     <script src="./Scripts/objects/Vector2.js"></script>
     <script src="./Scripts/objects/GameObject.js"></script>
-    <script src="./Scripts/objects/keys.js"></script>
-    <script src="./Scripts/objects/input.js"></script>
+    <script src="./Scripts/objects/ObjectState.js"></script>
 
     <script src="./Scripts/objects/character.js"></script>
     <script src="./Scripts/objects/classroomItem.js"></script>    
