--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="./Scripts/objects/Vector2.js"></script>
     <script src="./Scripts/objects/GameObject.js"></script>
     <script src="./Scripts/objects/ObjectState.js"></script>
+    <script src="./Scripts/objects/timer.js"></script>
 
     <script src="./Scripts/objects/character.js"></script>
     <script src="./Scripts/objects/classroomItem.js"></script>    
