--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="./Scripts/objects/GameObject.js"></script>
     <script src="./Scripts/objects/ObjectState.js"></script>
     <script src="./Scripts/objects/timer.js"></script>
+    <script src="./Scripts/objects/Label.js"></script>
 
     <script src="./Scripts/objects/character.js"></script>
     <script src="./Scripts/objects/classroomItem.js"></script>    
