Edit classroom item

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="./Scripts/config/game.js"></script>
     <script src="./Scripts/managers/Collision.js"></script>
     <script src="./Scripts/managers/keys.js"></script>
-    <script src="./Scripts/managers/input.js"></script>
+    <script src="./Scripts/managers/input.js"></script>  
 
     <script src="./Scripts/objects/Vector2.js"></script>
     <script src="./Scripts/objects/GameObject.js"></script>
@@ -28,6 +28,7 @@
 
     <script src="./Scripts/objects/character.js"></script>
     <script src="./Scripts/objects/classroomItem.js"></script>    
+    <script src="./Scripts/objects/table.js"></script>  
     <script src="./Scripts/game.js"></script>
 </body>
 </html>
