--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
     <script src="./Scripts/objects/ObjectState.js"></script>
     <script src="./Scripts/objects/timer.js"></script>
     <script src="./Scripts/objects/Label.js"></script>
+    <script src="./Scripts/objects/Button.js"></script>
+    <script src="./Scripts/objects/Scene.js"></script>
+    <script src="./Scripts/scenes/State.js"></script>
 
     <script src="./Scripts/objects/character.js"></script>
     <script src="./Scripts/objects/classroomItem.js"></script>    
     <script src="./Scripts/objects/table.js"></script>  
     <script src="./Scripts/game.js"></script>
+   
+    <script src="./Scripts/scenes/Play.js"></script>
+    <script src="./Scripts/scenes/Start.js"></script>
 </body>
 </html>
