--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <script src="./Scripts/objects/character.js"></script>
     <script src="./Scripts/objects/classroomItem.js"></script>    
-    <script src="./Scripts/objects/table.js"></script>  
+    <script src="./Scripts/objects/classroomObstacle.js"></script>  
     <script src="./Scripts/game.js"></script>
    
     <script src="./Scripts/scenes/Play.js"></script>
