Added end scene and collision between dog and player

--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
    
     <script src="./Scripts/scenes/Play.js"></script>
     <script src="./Scripts/scenes/Start.js"></script>
+    <script src="./Scripts/scenes/End.js"></script>
 </body>
 </html>
