--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="./Scripts/objects/character.js"></script>
     <script src="./Scripts/objects/classroomItem.js"></script>    
     <script src="./Scripts/objects/classroomObstacle.js"></script>  
+    <script src="./Scripts/objects/Dog.js"></script>  
     <script src="./Scripts/game.js"></script>
    
     <script src="./Scripts/scenes/Play.js"></script>
