--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     <script src="./Scripts/scenes/Play.js"></script>
     <script src="./Scripts/scenes/Start.js"></script>
     <script src="./Scripts/scenes/End.js"></script>
+    <script src="./Scripts/scenes/Tutorial.js"></script>
 </body>
 </html>
