--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <script src="./Scripts/objects/Dog.js"></script>  
     <script src="./Scripts/game.js"></script>
    
-    <script src="./Scripts/scenes/Play.js"></script>
+    <script src="./Scripts/scenes/Stage2.js"></script>   
+    <script src="./Scripts/scenes/Stage1.js"></script>
     <script src="./Scripts/scenes/Start.js"></script>
     <script src="./Scripts/scenes/End.js"></script>
-    <script src="./Scripts/scenes/Tutorial.js"></script>
 </body>
 </html>
