--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
     <script src="./Scripts/objects/character.js"></script>
     <script src="./Scripts/objects/classroomItem.js"></script>    
     <script src="./Scripts/objects/classroomObstacle.js"></script>  
+    <script src="./Scripts/objects/Computer.js"></script>  
     <script src="./Scripts/objects/Dog.js"></script>  
     <script src="./Scripts/game.js"></script>
    
+    <script src="./Scripts/scenes/Stage1.js"></script>   
     <script src="./Scripts/scenes/Stage2.js"></script>   
-    <script src="./Scripts/scenes/Stage1.js"></script>
+    <script src="./Scripts/scenes/Stage3.js"></script>
     <script src="./Scripts/scenes/Start.js"></script>
     <script src="./Scripts/scenes/End.js"></script>
 </body>
