--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="./Scripts/objects/classroomObstacle.js"></script>  
     <script src="./Scripts/objects/Computer.js"></script>  
     <script src="./Scripts/objects/Dog.js"></script>  
+    <script src="./Scripts/objects/Biscuit.js"></script>  
     <script src="./Scripts/game.js"></script>
    
     <script src="./Scripts/scenes/Stage1.js"></script>   
