--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <canvas id="canvas" width="640" height="480"></canvas>
 
     <!-- 3rd Party Libraries -->
-    <script src="./node_modules/easeljs/lib/easeljs.min.js"></script>
-    <script src="./node_modules/tweenjs/lib/tweenjs.min.js"></script>
-    <script src="./node_modules/soundjs/lib/soundjs.min.js"></script>
-    <script src="./node_modules/preloadjs/lib/preloadjs.min.js"></script>
+    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+    <script src="https://code.createjs.com/1.0.0/easeljs.min.js"></script>
+    <script src="https://code.createjs.com/1.0.0/tweenjs.min.js"></script>
+    <script src="https://code.createjs.com/1.0.0/soundjs.min.js"></script>
+    <script src="https://code.createjs.com/1.0.0/preloadjs.min.js"></script>
 
     <!--Game scripts-->
     <script src="./Scripts/config/game.js"></script>
