--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./Content/game.css">
 </head>
 <body>
-    <canvas id="canvas" width="640" height="480"></canvas>
+    <div id="mainContent">
+        <!-- The game "lives" inside the canvas -->
+        <canvas id="canvas" width="640" height="480"></canvas>
+    </div>
 
     <!-- 3rd Party Libraries -->
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
@@ -40,6 +43,7 @@
     <script src="./Scripts/objects/Biscuit.js"></script>  
     <script src="./Scripts/game.js"></script>
    
+    <script src="./Scripts/scenes/How.js"></script>
     <script src="./Scripts/scenes/Stage1.js"></script>   
     <script src="./Scripts/scenes/Stage2.js"></script>   
     <script src="./Scripts/scenes/Stage3.js"></script>
